--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -12,3 +12,13 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.trip-from 
+{
+  margin: 10% 30% 10% 30%;
+}
+
+.container
+{
+   width: 90% !important;
+}
